--- a/FlightsAndSearch/src/config/config.json
+++ b/FlightsAndSearch/src/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "Nc@#5271",
+    "database": "Flights_search_db_local",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
